--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "reactjs-infinite-scroll-loop": "^1.0.2",
     "styled-components": "^6.1.16",
     "tailwindcss": "^4.0.14"
   },
